# emocare

./: .gitignore  README.md
backend/: .env.example  langgraph.json  pyproject.toml  requirements.txt  test_local.py
backend/dataset/dpo/: build_dpo_dataset.py  build_hard_negatives.py  deepseek_dpo_gen.py  deepseek_dpo_v2.py  dpo_dataset.jsonl
backend/dataset/emotion_classifier/: train.json  val.json
backend/dataset/sft/: 数据集.txt
backend/script/: inference.py  model.py  train.py  train_dpo.py  train_lora.py  utils.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  conversation.py  crisis.py  emotion_recognizer.py  perception.py  tools.py
backend/src/api/: __init__.py  routes.py  schemas.py  websocket.py
backend/src/core/: __init__.py  config.py  state.py
backend/src/graph/: __init__.py  agent.py  builder.py  routes.py
backend/src/models/: __init__.py  audio_emotion.py  emotion_recognizer.py  model.py
backend/src/tools/: __init__.py  emotion_tracker.py  scheduler.py  weather.py  web_search.py
desktop-pet/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
desktop-pet/src/main/: apiClient.ts  index.ts  ipcHandlers.ts  preload.ts  windowManager.ts
desktop-pet/src/renderer/: App.tsx  main.tsx
desktop-pet/src/shared/: types.ts
llamafactory/: DEPLOY.md  README.md  dataset_info.json  dpo_qwen3_8b.yaml  emocare_dpo.jsonl  eval_dataset.jsonl  evaluate.py  generate_responses.py  llm_evaluator.py  setup.sh  sft_qwen3_8b.yaml  train.sh
(+7 files in other folders)
