[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emocare"
version = "1.0.0"
description = "EmoCare - 情感陪护助手，基于 LangGraph 的多Agent系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.10",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "httpx>=0.25.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    # 修复 opentelemetry 依赖冲突：确保所有 opentelemetry 包使用相同版本
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-common>=1.39.1",
    "opentelemetry-proto>=1.39.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
